--- a/.env
+++ b/.env
@@ -19,9 +19,10 @@ MONGODB_PORT="27017"
 MONGODB_VOLUME="mongodb-data"
 MONGODB_SYNC_VOLUME="mongodb-data:/data/db"
 
-AIRFLOW_PATH="./airflow-with-r"
-AIRFLOW_PORT="8080:8080"
-AIRFLOW_SYNC_VOLUME="/srv/study/airflow/dags:/root/airflow/dags"
+AIRFLOWEX_PATH="./air-flowEx"
+AIRFLOWEX_PORT="8080:8080"
+AIRFLOWEX_SYNC_VOLUME_1="./air-flowEx/dags:/root/airflow/dags"
+AIRFLOWEX_SYNC_VOLUME_2="./air-flowEx/conf/airflow.cfg:/root/airflow/airflow.cfg"
 
 RDESKTOP_IMAGE="lscr.io/linuxserver/rdesktop:ubuntu-xfce"
 RDESKTOP_SEC="seccomp:unconfined"
@@ -31,12 +32,10 @@ RDESKTOP_SYNC_VOLUME_1="rdesktop-data:/config"
 RDESKTOP_SYNC_VOLUME_2="/var/run/docker.sock:/var/run/docker.sock" # --> Docker Socket on the system, if you want to use Docker in the container
 RDESKTOP_DEVICE="/dev/dri:/dev/dri"
 
-
-RSTUDIO_IMAGE="rocker/rstudio"
-RSTUDIO_PASSWORD="x5J2x7E5tEb95MBpPSdAepNDBaTves"
-RSTUDIO_PORT="8888:8787"
-RSTUDIO_SYNC_VOLUME="/srv/study/R:/R"
-
+REX_IMAGE="rocker/rstudio"
+REX_PASSWORD="x5J2x7E5tEb95MBpPSdAepNDBaTves"
+REX_PORT="8888:8787"
+REX_SYNC_VOLUME="./rEx:/rEx"
 
 NGINXY_PATH="./ngiNxy"
 NGINXY_PORT="80:80"
