--- a/.env
+++ b/.env
@@ -2,9 +2,7 @@
 
 DEFAULT_USER="lipebol"
 DEFAULT_NETWORK="dockerized-network"
-
-RESTART_MODE_1="always"
-RESTART_MODE_2="unless-stopped"
+DEFAULT_RESTART_MODE="always"
 
 POSTGRES_IMAGE="postgres"
 POSTGRES_PASSWORD="72AQ9ethkDm155uXG8Ey9I9COcxO"
@@ -22,7 +20,7 @@ MONGODB_SYNC_VOLUME="mongodb-data:/data/db"
 AIRFLOWEX_PATH="./air-flowEx"
 AIRFLOWEX_PORT="8080:8080"
 AIRFLOWEX_SYNC_VOLUME_1="./air-flowEx/dags:/root/airflow/dags"
-AIRFLOWEX_SYNC_VOLUME_2="./air-flowEx/conf/airflow.cfg:/root/airflow/airflow.cfg"
+AIRFLOWEX_SYNC_VOLUME_2="./air-flowEx/configurations/airflow.cfg:/root/airflow/airflow.cfg"
 
 RDESKTOP_IMAGE="lscr.io/linuxserver/rdesktop:ubuntu-xfce"
 RDESKTOP_SEC="seccomp:unconfined"
