update location 'api'

--- a/ngiNxy/conf/default.conf.template
+++ b/ngiNxy/conf/default.conf.template
@@ -14,7 +14,7 @@ server {
         index  index.html index.htm;
     }
 
-    location /api/ {
+    location /api/v1/ {
         proxy_pass http://webservEx:3000;
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
