changed arg in 'env'

--- a/air-flowEx/local/dags/flows/spotifEx/.env
+++ b/air-flowEx/local/dags/flows/spotifEx/.env
@@ -23,7 +23,7 @@ OFF_BARS="/utils/others/settings_glava/off/*.glsl"
 ON_BARS="/utils/others/settings_glava/on/*.glsl"
 
 ### Commands
-NOTIFY_SEND="notify-send -u critical -t 0 --icon=%s %s"
+NOTIFY_SEND="notify-send -u critical -t 0 %s"
 SET_WALLPAPER="xfconf-query -c xfce4-desktop -p /backdrop/screen0/%s/workspace0/last-image -s %s"
 SET_GLAVA="${HOME}/.config/glava/%s"
 
