--- a/.env
+++ b/.env
@@ -3,40 +3,77 @@
 DEFAULT_USER="lipebol"
 DEFAULT_NETWORK="dockerized-network"
 DEFAULT_RESTART_MODE="always"
+DEFAULT_BUILD="Dockerfile"
+DEFAULT_CORE=2
+DEFAULT_MEM="4096M"
+DEFAULT_MEM_SWAP="8192M"
+DEFAULT_TIMEZONE="America/Sao_Paulo"
+DEFAULT_INTERVAL=30s
+DEFAULT_TIMEOUT=20s
+DEFAULT_RETRIES=3
 
-POSTGRES_IMAGE="postgres"
-POSTGRES_PASSWORD="72AQ9ethkDm155uXG8Ey9I9COcxO"
-POSTGRES_DB="doca"
-POSTGRES_PORT="5432"
-POSTGRES_VOLUME="pg-data"
-POSTGRES_SYNC_VOLUME="pg-data:/var/lib/postgresql/data"
+POSTGRESQL_IMAGE="postgres"
+POSTGRESQL_NAME="postgrEx"
+POSTGRESQL_PASSWORD="72AQ9ethkDm155uXG8Ey9I9COcxO"
+POSTGRESQL_DB="dockerized"
+POSTGRESQL_PORT="5432"
+POSTGRESQL_VOLUME="pg-data"
+POSTGRESQL_SYNC_VOLUME="pg-data:/var/lib/postgresql/data"
 
 MONGODB_IMAGE="mongodb/mongodb-community-server"
+MONGODB_NAME="mongOx"
 MONGODB_PASSWORD="h6XFtU69EcbETLhP1jGRa2gEJ7"
 MONGODB_PORT="27017"
 MONGODB_VOLUME="mongodb-data"
 MONGODB_SYNC_VOLUME="mongodb-data:/data/db"
 
-AIRFLOWEX_PATH="./air-flowEx"
-AIRFLOWEX_PORT="8080:8080"
-AIRFLOWEX_SYNC_VOLUME_1="./air-flowEx/dags:/root/airflow/dags"
-AIRFLOWEX_SYNC_VOLUME_2="./air-flowEx/configurations/airflow.cfg:/root/airflow/airflow.cfg"
+AIRFLOW_WITH_R_PATH="./airflow-with-R"
+AIRFLOW_WITH_R_COMMAND="./run.sh"
+AIRFLOW_WITH_R_IMAGE="airflow-with-r/v1"
+AIRFLOW_WITH_R_NAME="air-flowEx"
+AIRFLOW_WITH_R_PORT="8080:8080"
+AIRFLOW_WITH_R_SYNC_VOLUME_1="./airflow-with-R/dags:/root/airflow/dags"
+AIRFLOW_WITH_R_SYNC_VOLUME_2="./airflow-with-R/configurations/airflow.cfg:/root/airflow/airflow.cfg"
+AIRFLOW_WITH_R_WORKDIR="/root/airflow"
 
 RDESKTOP_IMAGE="lscr.io/linuxserver/rdesktop:ubuntu-xfce"
+RDESKTOP_NAME="desktOx"
 RDESKTOP_SEC="seccomp:unconfined"
 RDESKTOP_PORT="3389:3389"
 RDESKTOP_VOLUME="rdesktop-data"
 RDESKTOP_SYNC_VOLUME_1="rdesktop-data:/config"
 RDESKTOP_SYNC_VOLUME_2="/var/run/docker.sock:/var/run/docker.sock" # --> Docker Socket on the system, if you want to use Docker in the container
 RDESKTOP_DEVICE="/dev/dri:/dev/dri"
+RDESKTOP_SHM_SIZE="1gb"
 
-REX_IMAGE="rocker/rstudio"
-REX_PASSWORD="x5J2x7E5tEb95MBpPSdAepNDBaTves"
-REX_PORT="8888:8787"
-REX_SYNC_VOLUME="./rEx:/rEx"
+RSTUDIO_IMAGE="rocker/rstudio"
+RSTUDIO_NAME="rEx"
+RSTUDIO_PASSWORD="x5J2x7E5tEb95MBpPSdAepNDBaTves"
+RSTUDIO_PORT="8888:8787"
+RSTUDIO_SYNC_VOLUME="./rstudio:/rEx"
+RSTUDIO_WORKDIR="/rEx"
 
-NGINXY_PATH="./ngiNxy"
-NGINXY_PORT="80:80"
-NGINXY_SYNC_VOLUME_1="./ngiNxy/conf/nginx.conf:/etc/nginx/nginx.conf"
-NGINXY_SYNC_VOLUME_2="./ngiNxy/conf/default.conf.template:/etc/nginx/conf.d/default.conf"
-NGINXY_SYNC_VOLUME_3="./ngiNxy/public:/usr/share/nginx/html"
+MINIO_COMMAND="server /mnt/data --console-address :9090"
+MINIO_IMAGE="quay.io/minio/minio:latest"
+MINIO_NAME="minEx"
+MINIO_ENV_FILE="/etc/config.env"
+MINIO_PORT_MAIN="9000:9000"
+MINIO_PORT_ADMIN="9090:9090"
+MINIO_SYNC_VOLUME_1="./minio/data:/mnt/data"
+MINIO_SYNC_VOLUME_2="./minio/.env:/etc/config.env"
+MINIO_HEALTH="curl -f http://localhost:9000/minio/health/live"
+
+ARROW_FLIGH_RPC_PATH="./arrow-flight-rpc"
+ARROW_FLIGH_RPC_PORT="5000:8815"
+ARROW_FLIGH_RPC_SYNC_VOLUME="./arrow-flight-rpc:/flightEx"
+ARROW_FLIGH_RPC_WORKDIR="/flightEx"
+
+NGINX_REVERSE_PROXY_PATH="./nginx-reverse-proxy"
+NGINX_REVERSE_PROXY_IMAGE="nginx-reverse-proxy/v1"
+NGINX_REVERSE_PROXY_NAME="ngiNxy"
+NGINX_REVERSE_PROXY_PORT="80:80"
+NGINX_REVERSE_PROXY_SYNC_VOLUME_1="./nginx-reverse-proxy/conf/nginx.conf:/etc/nginx/nginx.conf"
+NGINX_REVERSE_PROXY_SYNC_VOLUME_2="./nginx-reverse-proxy/conf/default.conf.template:/etc/nginx/conf.d/default.conf"
+NGINX_REVERSE_PROXY_SYNC_VOLUME_3="./nginx-reverse-proxy/public:/usr/share/nginx/html"
+
+
