--- a/airflow-with-R/local/dags/common/.env
+++ b/airflow-with-R/local/dags/common/.env
@@ -1,19 +1,11 @@
-UTEX="/root/airflow/dags/utEx"
+COMMON="/root/airflow/dags/common"
 
 ### Projects
-REQUIREMENTS="['endpoints','fields','mainSchema','mainTable','path']"
+REQUIREMENTS="['csv_files','fetch','file_fields','mainSchema','path','resolveName']"
 PAGINATION_FIELDS="{'by_param': ['parametro', 'total_registros', 'paginas']}"
 JOBS_PATH="/root/airflow/dags/flows/jobs"
 SPOTIFEX_PATH="/root/airflow/dags/flows/spotifEx"
-
-### PostgreSQL
-ENGINE=""
-
-
-### MongoDB
-MONGODB_URI=""
-MONGODB_DATABASE="etl"
-
+CONVERT_DATE_USING_PYARROW_PATH="/root/airflow/dags/flows/convert_date_using_pyarrow"
 
 ### webservEx
 HOST="http://localhost/api/v1%s"
