add database schema

--- a/airflow-with-R/local/dags/common/.env
+++ b/airflow-with-R/local/dags/common/.env
@@ -10,6 +10,10 @@ CONVERT_DATE_USING_PYARROW_PATH="/root/airflow/dags/flows/convert_date_using_pya
 ### webservEx
 HOST="http://localhost/api/v1%s"
 
+
+### PostgreSQL
+POSTS_SCHEMA="posts"
+
 ### DuckDB
 #QUERY="SELECT * FROM read_parquet(%(parquet)s)"
 
