changed define 'fields' and rm database schema

--- a/airflow-with-R/local/dags/flows/convert_date_using_pyarrow/python/.env
+++ b/airflow-with-R/local/dags/flows/convert_date_using_pyarrow/python/.env
@@ -1,11 +1,7 @@
-CONVERT_DATE_USING_PYARROW_FILE_FIELDS="{'data':['COLUMN_1','COLUMN_2','COLUMN_3','COLUMN_4',
-'data_referencia','data_inicio_atendimento','data_fim_atendimento','COLUMN_8','COLUMN_9',
-'COLUMN_10','COLUMN_11','COLUMN_12','COLUMN_13','COLUMN_14','NOME_MUNICIPIO_XXXXXX','UF_XXXXXX',
-'COLUMN_17','COLUMN_18','sexo','MUNICIPIO_XXXXXX','UF_XXXXXX','dat_nascimento','COLUMN_23',
-'COLUMN_24','COLUMN_25','COLUMN_26','COLUMN_27','referencia','ano']}"
+CONVERT_DATE_USING_PYARROW_FILE_FIELDS="{'data':
+['id','nome','data_ref','data_inicio','cod','data_fim','data_atual']
+}"
 
-### PostgreSQL
-CONVERT_DATE_USING_PYARROW_SCHEMA="conversions"
 
 ### Files
 
