changed and add env variables

--- a/.env
+++ b/.env
@@ -27,13 +27,13 @@ MONGODB_PORT="27017"
 MONGODB_VOLUME="mongodb-data"
 MONGODB_SYNC_VOLUME="mongodb-data:/data/db"
 
-AIRFLOW_WITH_R_PATH="./airflow-with-R"
+AIRFLOW_WITH_R_PATH="./airflow-with-R/local"
 AIRFLOW_WITH_R_COMMAND="./run.sh"
 AIRFLOW_WITH_R_IMAGE="airflow-with-r/v1"
 AIRFLOW_WITH_R_NAME="air-flowEx"
 AIRFLOW_WITH_R_PORT="8080:8080"
-AIRFLOW_WITH_R_SYNC_VOLUME_1="./airflow-with-R/dags:/root/airflow/dags"
-AIRFLOW_WITH_R_SYNC_VOLUME_2="./airflow-with-R/configurations/airflow.cfg:/root/airflow/airflow.cfg"
+AIRFLOW_WITH_R_SYNC_VOLUME_1="./airflow-with-R/local/dags:/root/airflow/dags"
+AIRFLOW_WITH_R_SYNC_VOLUME_2="./airflow-with-R/local/configurations/airflow.cfg:/root/airflow/airflow.cfg"
 AIRFLOW_WITH_R_WORKDIR="/root/airflow"
 
 RDESKTOP_IMAGE="lscr.io/linuxserver/rdesktop:ubuntu-xfce"
@@ -52,21 +52,6 @@ RSTUDIO_PASSWORD="x5J2x7E5tEb95MBpPSdAepNDBaTves"
 RSTUDIO_PORT="8888:8787"
 RSTUDIO_SYNC_VOLUME="./rstudio:/rEx"
 RSTUDIO_WORKDIR="/rEx"
-
-MINIO_COMMAND="server /mnt/data --console-address :9090"
-MINIO_IMAGE="quay.io/minio/minio:latest"
-MINIO_NAME="minEx"
-MINIO_ENV_FILE="/etc/config.env"
-MINIO_PORT_MAIN="9000:9000"
-MINIO_PORT_ADMIN="9090:9090"
-MINIO_SYNC_VOLUME_1="./minio/data:/mnt/data"
-MINIO_SYNC_VOLUME_2="./minio/.env:/etc/config.env"
-MINIO_HEALTH="curl -f http://localhost:9000/minio/health/live"
-
-ARROW_FLIGH_RPC_PATH="./arrow-flight-rpc"
-ARROW_FLIGH_RPC_PORT="5000:8815"
-ARROW_FLIGH_RPC_SYNC_VOLUME="./arrow-flight-rpc:/flightEx"
-ARROW_FLIGH_RPC_WORKDIR="/flightEx"
 
 NGINX_REVERSE_PROXY_PATH="./nginx-reverse-proxy"
 NGINX_REVERSE_PROXY_IMAGE="nginx-reverse-proxy/v1"
