add env variable

--- a/.env
+++ b/.env
@@ -6,5 +6,7 @@ MONGODB_PASSWORD="h6XFtU69EcbETLhP1jGRa2gEJ7"
 
 RSTUDIO_PASSWORD="x5J2x7E5tEb95MBpPSdAepNDBaTves"
 
+PGADMIN4_PASSWORD="zZ110MZQCQ3nvNDWfb6d"
+
 
 ### docker exec -it xfce passwd abc
