--- a/airflow-with-R/local/.old/configurations/airflow.cfg
+++ b/airflow-with-R/local/.old/configurations/airflow.cfg
@@ -4,7 +4,7 @@
 #
 # Variable: AIRFLOW__CORE__DAGS_FOLDER
 #
-dags_folder = /root/airflow/dags
+dags_folder = /opt/user/dockerized/airflow/dags
 
 # Hostname by providing a path to a callable, which will resolve the hostname.
 # The format is "package.function".
@@ -50,7 +50,7 @@ default_timezone = utc
 # Variable: AIRFLOW__CORE__EXECUTOR
 #
 
-#executor = SequentialExecutor
+# executor = SequentialExecutor
 executor = LocalExecutor
 
 # The auth manager class that airflow should use. Full import path to the auth manager class.
@@ -129,7 +129,7 @@ load_examples = False
 #
 # Variable: AIRFLOW__CORE__PLUGINS_FOLDER
 #
-plugins_folder = /root/airflow/plugins
+plugins_folder = /opt/user/dockerized/airflow/plugins
 
 # Should tasks be executed via forking of the parent process
 # 
@@ -497,7 +497,7 @@ alembic_ini_file_path = alembic.ini
 # Variable: AIRFLOW__DATABASE__SQL_ALCHEMY_CONN
 #
 
-#sql_alchemy_conn = sqlite:////root/airflow/airflow.db
+# sql_alchemy_conn = sqlite:////opt/user/dockerized/airflow/airflow.db
 sql_alchemy_conn = postgresql+psycopg2://airflow:O8Qop2JbmlI8mJpV14iMKgTnbzxlZs@postgresql:5432/airflow_db
 
 # Extra engine specific keyword args passed to SQLAlchemy's create_engine, as a JSON-encoded value
@@ -639,7 +639,7 @@ check_migrations = True
 #
 # Variable: AIRFLOW__LOGGING__BASE_LOG_FOLDER
 #
-base_log_folder = /root/airflow/logs
+base_log_folder = /opt/user/dockerized/airflow/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to ``True`` if you want to enable remote logging.
@@ -821,7 +821,7 @@ log_processor_filename_template = {{ filename }}.log
 #
 # Variable: AIRFLOW__LOGGING__DAG_PROCESSOR_MANAGER_LOG_LOCATION
 #
-dag_processor_manager_log_location = /root/airflow/logs/dag_processor_manager/dag_processor_manager.log
+dag_processor_manager_log_location = /opt/user/dockerized/airflow/logs/dag_processor_manager/dag_processor_manager.log
 
 # Whether DAG processor manager will write logs to stdout
 #
@@ -1391,7 +1391,7 @@ access_denied_message = Access is Denied
 #
 # Variable: AIRFLOW__WEBSERVER__CONFIG_FILE
 #
-config_file = /root/airflow/webserver_config.py
+config_file = /opt/user/dockerized/airflow/webserver_config.py
 
 # The base url of your website: Airflow cannot guess what domain or CNAME you are using.
 # This is used to create links in the Log Url column in the Browse - Task Instances menu,
@@ -2166,7 +2166,7 @@ orphaned_tasks_check_interval = 300.0
 #
 # Variable: AIRFLOW__SCHEDULER__CHILD_PROCESS_LOG_DIRECTORY
 #
-child_process_log_directory = /root/airflow/logs/scheduler
+child_process_log_directory = /opt/user/dockerized/airflow/logs/scheduler
 
 # Local task jobs periodically heartbeat to the DB. If the job has
 # not heartbeat in this many seconds, the scheduler will mark the
