--- a/airflow-with-R/local/Dockerfile
+++ b/airflow-with-R/local/Dockerfile
@@ -9,14 +9,17 @@ RUN wget -qO- https://cloud.r-project.org/bin/linux/ubuntu/marutter_pubkey.asc |
     echo 'deb [signed-by=/usr/share/keyrings/r-project.gpg] https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/' | \ 
     tee -a /etc/apt/sources.list.d/r-project.list
 RUN apt update && apt install --no-install-recommends nano python3-pip python3-venv \
-    r-base r-cran-dplyr r-cran-magrittr r-cran-lubridate r-cran-rjava r-cran-dbi -y 
-RUN pip install --upgrade flask-appbuilder python-dotenv pysmb psycopg2-binary pymongo requests cryptography \
+    r-base r-cran-dplyr r-cran-magrittr r-cran-lubridate r-cran-rjava r-cran-dbi -y
+RUN pip install --upgrade flask-appbuilder python-dotenv pysmb psycopg2-binary \
+    pymongo requests cryptography xmltodict beautifulsoup4 lxml pillow \
     google-api-python-client google-auth-httplib2 google-auth-oauthlib \
-    beautifulsoup4 lxml pillow pyarrow unidecode pandas duckdb adbc_driver_manager adbc_driver_postgresql \
+    pyarrow unidecode pandas duckdb adbc_driver_manager adbc_driver_postgresql \
     apache-airflow-providers-postgres JayDeBeApi apache-airflow-providers-samba \
     apache-airflow-providers-jdbc \
-    'apache-airflow==3.0.4' \
-    --constraint 'https://raw.githubusercontent.com/apache/airflow/constraints-3.0.4/constraints-3.10.txt'
+    'apache-airflow==2.11.0' \
+    --constraint 'https://raw.githubusercontent.com/apache/airflow/constraints-2.11.0/constraints-3.10.txt'
+    # 'apache-airflow==3.0.4' \
+    # --constraint 'https://raw.githubusercontent.com/apache/airflow/constraints-3.0.4/constraints-3.10.txt'
 RUN R -e 'install.packages(c("dotenv", "RJDBC"))' \
     && mkdir -p /opt/user \
     && groupadd --system airflow \
