add version airflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,12 +54,20 @@ services:
     <<: *common
     command: |
       bash -c "
-        airflow api-server --port 8080 &
+        airflow webserver --port 8080 &
         airflow scheduler &
-        airflow dag-processor &
-        airflow triggerer &
         tail -f /dev/null
       "
+    # -- version 3 --
+    # command: |
+    #   bash -c "
+    #     airflow api-server --port 8080 &
+    #     airflow scheduler &
+    #     airflow dag-processor &
+    #     airflow triggerer &
+    #     tail -f /dev/null
+    #   "
+    #-----------------
     build:
       context: ./airflow-with-R/local
     image: lipebol/airflow:v1
@@ -67,7 +75,10 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - ./airflow-with-R/local/configurations/airflow.cfg:/opt/user/dockerized/airflow/airflow.cfg
+      - ./airflow-with-R/local/.old/configurations/airflow.cfg:/opt/user/dockerized/airflow/airflow.cfg
+      # -- version 3 --
+      # - ./airflow-with-R/local/configurations/airflow.cfg:/opt/user/dockerized/airflow/airflow.cfg
+      #-----------------
       - ./airflow-with-R/local/dags:/opt/user/dockerized/airflow/dags
     working_dir: /opt/user/dockerized/airflow
     deploy:
