--- a/airflow-with-R/local/.old/conf/airflow.cfg
+++ b/airflow-with-R/local/.old/conf/airflow.cfg
@@ -50,8 +50,8 @@ default_timezone = utc
 # Variable: AIRFLOW__CORE__EXECUTOR
 #
 
-# executor = SequentialExecutor
-executor = LocalExecutor
+executor = SequentialExecutor
+# executor = LocalExecutor
 
 # The auth manager class that airflow should use. Full import path to the auth manager class.
 #
@@ -497,8 +497,8 @@ alembic_ini_file_path = alembic.ini
 # Variable: AIRFLOW__DATABASE__SQL_ALCHEMY_CONN
 #
 
-# sql_alchemy_conn = sqlite:////opt/user/dockerized/airflow/airflow.db
-sql_alchemy_conn = postgresql+psycopg2://airflow:O8Qop2JbmlI8mJpV14iMKgTnbzxlZs@postgresql:5432/airflow_db
+sql_alchemy_conn = sqlite:////opt/user/dockerized/airflow/airflow.db
+# sql_alchemy_conn = postgresql+psycopg2://airflow:O8Qop2JbmlI8mJpV14iMKgTnbzxlZs@postgresql:5432/airflow_db
 
 # Extra engine specific keyword args passed to SQLAlchemy's create_engine, as a JSON-encoded value
 #
