--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,11 @@ services:
       - 5432
     volumes:
       - pgdata:/var/lib/postgresql/data
+    deploy:
+      resources:
+        limits:
+          memory: 4096M
+    memswap_limit: 8192M
 
   mongodb:
     <<: *common
@@ -84,7 +89,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: 4
+          cpus: 2
           memory: 4096M
     memswap_limit: 8192M
   
