--- a/express-graphql/package.json
+++ b/express-graphql/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "webserver",
-  "version": "1.0.0",
-  "description": "Created to standardize the way of distributing data recorded in strategic databases.",
-  "main": "server.js",
-  "author": "lipebol",
-  "license": "MIT",
   "scripts": {
     "start": "node server.js"
   },
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
-    "dayjs": "^1.11.11",
-    "dotenv": "^16.4.7",
-    "express": "^4.19.2",
-    "graphql": "^16.9.0",
-    "graphql-http": "^1.22.1",
-    "graphql-playground-middleware-express": "^1.7.23",
-    "mongoose": "^8.5.2",
-    "pg": "^8.12.0",
+    "dataloader": "^2.2.3",
+    "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
+    "graphql": "^16.12.0",
+    "graphql-http": "^1.22.4",
+    "mongoose": "^8.19.4",
+    "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3",
-    "swagger-ui-express": "^5.0.1"
+    "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
